--- a/style.css
+++ b/style.css
@@ -7,3 +7,20 @@
 h1 {
     font-family: "Lobster", sans-serif;
 }
+
+.img-container {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+img {
+    width: 200px;
+    height: auto;
+}
+
+@media (max-width: 700px) {
+img {
+    max-width: 20%;
+}
+}
