--- a/style.css
+++ b/style.css
@@ -26,7 +26,6 @@ img {
     align-items: center;
 }
 
-/* Add button styles? */
 button {
     padding: 0.5rem;
     font-family: sans-serif;
@@ -74,4 +73,12 @@ p {
     margin-top: 4rem;
     font-weight: 800;
     font-size: 2rem;
+    color: red;
+}
+
+#try-again {
+    font-weight: 800;
+    font-size: 1.5rem;
+    margin-top: 2rem;
+    color: red;
 }
