--- a/style.css
+++ b/style.css
@@ -38,14 +38,8 @@ img {
 }
 }
 
-p {
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    font-weight: 800;
-    font-size: 2rem;
-}
-
 #scores-container {
+    margin-top: 4rem; 
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -59,6 +53,12 @@ p {
 }
 
 .playerscore-div, .compscore-div, #player-score, #computer-score {
+    font-weight: 800;
+    font-size: 2rem;
+}
+
+#instructions {
+    margin-top: 5rem;
     font-weight: 800;
     font-size: 2rem;
 }
